feat(4-review-n-plus-one): step 1 — service-refactor